ajout du repertoire de media images, ajout du fichier porfolio.html

--- a/cl_shop/porfolio.html
+++ b/cl_shop/porfolio.html
@@ -34,12 +34,12 @@
                 <p>
                     Nous avons 5 annees d'experiance dans le domaine de l'informatique et <br>
                     nous offrons une formation en ligne et une formation a distance <br>
-                    
                 </p>
             </div>
         </div>
     </div>
 
+    <!-- profil de l'utilisateur -->
     <div>
         <div><img src="images/user_profile.jpg" alt=""></div>
         <div>Beavogui</div>
