creation du file cv.html initialisation de l'entete

--- a/cl_shop/shop.html
+++ b/cl_shop/shop.html
@@ -318,26 +318,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    /* STYLES MAKES BY TEACHER  */
     .banniere-image img {
         width: 300px;
     }
