--- a/cl_shop/shop.html
+++ b/cl_shop/shop.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clshop - site Ecommerce</title>
+    <link rel="stylesheet" href="styles/shop.css">
 </head>
-
-
-<!-- 
-    nos tabletes
-    nos telephones
-    nos produits electro menager -->
 
 <body>
    <!-- Debut entête de la page  -->
-    <div id="entête"  style="background: linear-gradient(100deg, blue, red); color: white; font-size: 30px;padding: 20px;">
-        <marquee behavior="alternate" direction="RIGHT">
+    <div id="entete" >
+        <!-- <marquee behavior="alternate" direction="RIGHT">
             BIENVENU SUR CLSHOP VOTRE BOUTIQUE EN LIGNE
-        </marquee> 
+        </marquee>  -->
+        <h2>BIENVENU SUR CLSHOP VOTRE BOUTIQUE EN LIGNE</h2>
     </div>
     <!-- Fin entête de la page -->
 
@@ -257,132 +253,3 @@
 
 </body>
 </html>
-
-<style>
-
-    .titre {
-        background: linear-gradient(to right, rgb(255, 72, 0), red );
-        text-align: center;
-        text-transform: uppercase;
-        color: #fff;
-        font-size: 2em;
-        margin: 5px;
-    }
-    .list-produits {
-        display: flex;
-        justify-content: center;
-
-    }
-
-    .produits {
-        width:15em;
-        text-align: center;
-        margin: 2em;
-
-    }
-    .produit-img {
-        height: 12em;
-
-    }
-
-    .produit-img img {
-        width: 100%;
-
-    }
-
-    .produit-desc p {
-        color: rgb(255, 123, 0);
-    }
-
-    .produit-desc button {
-        background-color: #ff00ff;
-        border-radius: 10px;
-        padding: 10px;
-        color: #fff;
-    }
-
-    .produit-desc h4 {
-        text-transform: capitalize;
-    }
-
-    .produit-desc button:hover {
-        background-color: #ff5100;
-        border-radius: 10px;
-        padding: 10px;
-        color: #fff;
-        font-weight: bold;
-        font-size: large;
-    }
-
-
-
-
-
-    /* STYLES MAKES BY TEACHER  */
-    .banniere-image img {
-        width: 300px;
-    }
-    #banniere
-    {
-        display: flex;
-        justify-content: center;
-        margin: 10px;;
-    }
-    .banniere-image
-    {
-        margin: 0 50px;
-    }
-
-    #titre {
-        text-align: center;
-        font-size: 30px;
-        color: #fff;
-        background-color: #000;
-        text-transform: capitalize;
-    }
-
-    /* style liste produits */
-    .produit {
-        width: 250px;
-        margin: 20px;
-
-    }
-
-    .produit-image img {
-        width: 100%;
-        height: 200px;
-
-    }
-    /* .produit-image  {
-        display: ;
-    } */
-    #liste-produits {
-        display: flex; 
-        justify-content: center;
-    }
-
-    .description {
-        text-align: center;
-    }
-
-    .description p {
-        color: #ff0000;
-    }
-
-    .description button {
-        background-color: #000075;
-        /* background-color: #ff5733; */
-        color: #fff;
-        font-size: 1.3em;
-        padding: 10px;
-        border-radius: 10px;
-    }
-
-    .description button:hover {
-        background-color: #fff;
-        color: #000075;
-        /* cursor: pointer; */
-    }
-    
-
-</style>
