conection de chacun de nos fichier de devoir

--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
                     </li>
       
                     <li class="nav-item dropdown">
@@ -30,10 +30,10 @@
                         Nos Produits
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Ordinateurs</a></li>
-                        <li><a class="dropdown-item" href="#">Smartphones</a></li>
+                        <li><a class="dropdown-item" href="./ordinateur.html">Ordinateurs</a></li>
+                        <li><a class="dropdown-item" href="./smartphones.html">Smartphones</a></li>
                         <!-- <li><hr class="dropdown-divider"></li> -->
-                        <li><a class="dropdown-item" href="#">Electro Menager</a></li>
+                        <li><a class="dropdown-item" href="./Produits_electromenagers.html">Electro Menager</a></li>
                       </ul>
                     </li>
       
@@ -93,7 +93,9 @@
             <div class="card-body">
               <h5 class="card-title">PC MAC</h5>
               <p>5 000 000 <span>GNF</span></p>
-              <input type="button" class="btn btn-primary" value="Voir plus">
+              <a href="./voirplus.html">
+                <input type="button" class="btn btn-primary" value="Voir plus">
+              </a>
 
             </div>
           </div>
